--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -42,12 +42,13 @@ body, html {
     width: 80%;
     max-width: 600px;
     padding: 20px;
-    background: #ffffff;
+    background: #37c9b8;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     border-radius: 10px;
-    text-align: center;
+    text-align:justify;
     transition: box-shadow 0.3s ease;
     margin-bottom: 50px; 
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .info-card:hover {
@@ -86,7 +87,7 @@ body, html {
     height: 80px;
     background-color: lightgray;
     border-radius: 50%;
-    border: 2px solid #4CAF50;
+    border: 2px solid #68caf4;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -113,4 +114,9 @@ body, html {
 
 .timeline-item:last-child .line {
     display: none; 
+}
+
+
+.dbgfgbsewudb{
+    color:#4662c7;
 }
