--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -37,22 +37,41 @@ body, html {
 }
 
 
+/* styles.css */
 .info-card {
     margin: 0 auto;
-    width: 80%;
-    max-width: 600px;
+    width: 400px; 
+    height: 20%;
+    max-width: 100%; 
     padding: 20px;
+    overflow: auto;
+    scroll-behavior: smooth;
     background: #37c9b8;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     border-radius: 10px;
-    text-align:justify;
+    text-align: justify;
     transition: box-shadow 0.3s ease;
-    margin-bottom: 50px; 
+    margin-bottom: 50px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+
+@media (min-width: 768px) {
+    .info-card {
+        width: 600px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .info-card {
+        width: 700px;
+    }
+}
+
+
 .info-card:hover {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3), 0 8px 30px rgba(0, 0, 0, 0.25);
+    background-color:#4b99ba;
 }
 
 .timeline-container {
